--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,13 @@ Version: 0.1.0
 Author: Jakub Kryczka
 Maintainer: Jakub Kryczka <jak222@exeter.ac.uk>
 Description: Package containing all relevant functions required for obtaining Tweets and analysing them.
-Depends:tidyverse,tidytext,wordcloud,rtweet,reshape2,ggraph,igraph,RColorBrewer,grid
+Depends: tidyverse,tidytext,wordcloud,rtweet,reshape2,ggraph,igraph,RColorBrewer,grid
+VignetteBuilder: knitr
 License: N/A
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
