--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Jakub Kryczka
 Maintainer: Jakub Kryczka <jak222@exeter.ac.uk>
 Description: Package containing all relevant functions required for obtaining Tweets and analysing them.
-Depends: tidyverse,tidytext,wordcloud,rtweet,reshape2,ggraph,igraph,RColorBrewer,grid
+Depends: tidyverse,tidytext,wordcloud,rtweet,reshape2,ggraph,igraph,RColorBrewer,grid,topicmodels,ldatuning
 VignetteBuilder: knitr
 License: N/A
 Encoding: UTF-8
@@ -14,4 +14,3 @@ RoxygenNote: 6.1.1
 Suggests: 
     knitr,
     rmarkdown
-VignetteBuilder: knitr
